@@ -851,3 +851,96 @@ void freeLink (s_link *link)
   free(link->autoFileCreateFile);
 }
 
+int e_readCheck(const s_fidoconfig *config, s_area *echo, s_link *link) {
+
+    // rc == '\x0000' access o'k
+    // rc == '\x0001' no access group
+    // rc == '\x0002' no access level
+    // rc == '\x0003' no access export
+    // rc == '\x0004' not linked
+    
+    int i;
+
+    for (i=0; i<echo->downlinkCount; i++) {
+		if (link == echo->downlinks[i]->link) break;
+    }
+    if (i == echo->downlinkCount) return 4;
+
+    // pause
+    if (link->Pause) return 3;
+
+    if (strcmp(echo->group,"0")) {
+		if (link->numAccessGrp) {
+			if (config->numPublicGroup) {
+				if (!grpInArray(echo->group,link->AccessGrp,link->numAccessGrp) &&
+					!grpInArray(echo->group,config->PublicGroup,config->numPublicGroup))
+					return 1;
+			} else if (!grpInArray(echo->group,link->AccessGrp,link->numAccessGrp)) return 1;
+		} else if (config->numPublicGroup) {
+			if (!grpInArray(echo->group,config->PublicGroup,config->numPublicGroup)) return 1;
+		} else return 1;
+    }
+    
+    if (echo->levelread > link->level) return 2;
+    
+    if (i < echo->downlinkCount) {
+		if (echo->downlinks[i]->export == 0) return 3;
+    }
+    
+    return 0;
+}
+
+int e_writeCheck(const s_fidoconfig *config, s_area *echo, s_addr *aka) {
+
+    // rc == '\x0000' access o'k
+    // rc == '\x0001' no access group
+    // rc == '\x0002' no access level
+    // rc == '\x0003' no access import
+    // rc == '\x0004' not linked
+
+    int i;
+
+    s_link *link;
+    
+    if (!addrComp(*aka,*echo->useAka)) return 0;
+    
+    link = getLinkFromAddr (*config,*aka);
+    if (link == NULL) return 4;
+    
+    for (i=0; i<echo->downlinkCount; i++) {
+		if (link == echo->downlinks[i]->link) break;
+    }
+    if (i == echo->downlinkCount) return 4;
+    
+// Do not check groups here, too much checking, use groups only for areafix
+//    if (echo->group != '\060') {
+//	if (link->AccessGrp) {
+//	    if (config->PublicGroup) {
+//		if (strchr(link->AccessGrp, echo->group) == NULL &&
+//		    strchr(config->PublicGroup, echo->group) == NULL) return 1;
+//	    } else if (strchr(link->AccessGrp, echo->group) == NULL) return 1;
+//	} else if (config->PublicGroup) {
+//		   if (strchr(config->PublicGroup, echo->group) == NULL) return 1;
+//	       } else return 1;
+//    }
+    
+    if (strcmp(echo->group,"0")) {
+		if (link->numAccessGrp) {
+			if (config->numPublicGroup) {
+				if (!grpInArray(echo->group,link->AccessGrp,link->numAccessGrp) &&
+					!grpInArray(echo->group,config->PublicGroup,config->numPublicGroup))
+					return 1;
+			} else if (!grpInArray(echo->group,link->AccessGrp,link->numAccessGrp)) return 1;
+		} else if (config->numPublicGroup) {
+			if (!grpInArray(echo->group,config->PublicGroup,config->numPublicGroup)) return 1;
+		} else return 1;
+    }
+
+    if (echo->levelwrite > link->level) return 2;
+    
+    if (i < echo->downlinkCount) {
+		if (echo->downlinks[i]->import == 0) return 3;
+    }
+    
+    return 0;
+}
